# Thumbnail-Generation

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
app/: config.py  graph.py  logger.py  main.py  models.py  utils.py
app/config/: conf.json
app/libs/: base_storage.py  storage.py
app/routers/: __init__.py  course.py  resource.py
app/routers/v1/: __init__.py  course.py  resource.py
app/routers/v2/: __init__.py  course.py
app/services/: course.py  image_generation.py  image_variation.py  storage.py  summarization.py
app/services/v1/: course.py  image_variation.py
app/services/v2/: image_variation.py
demo_app/: README.md  frontend.py
tests/: conftest.py  test_base_storage.py  test_main.py  test_storage.py  test_utils.py
tests/routers/v1/: test_course.py
tests/routers/v2/: test_course_v2.py
tests/services/v1/: test_image_variation_v1.py
tests/services/v2/: test_image_variation_v2.py
