[tool.poetry]
name = "KB Image Generation API"
version = "0.1.0"
description = ""
authors = ["Vaibhav Bhuva <vaibhav.bhuva@tarento.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
langchain = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
locust = "^2.31.4"
vertexai = "^1.66.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=html:coverage"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config.py",
    "*/logger.*",
    "*/models.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
